--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     header {
       position: sticky;
       top: 0;
-      background: #fff;
+      background: #097575bb;
       display: flex;
       justify-content: space-between;
       align-items: center;
