--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     header {
       position: sticky;
       top: 0;
-      background: #097575bb;
+      background: #ffffffbb;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -61,10 +61,12 @@
       font-size: 3rem;
       font-weight: 800;
       margin-bottom: 1rem;
+	  color: #111827;
     }
     .hero p {
       font-size: 1.25rem;
       margin-bottom: 2rem;
+	  color: #111827;
     }
     .btn-primary {
       background: #2563EB;
