--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       margin: 0;
       font-family: 'Inter', sans-serif;
       background: #F9FAFB;
-      color: #111827;
+      color: #ffffff;
     }
     /* Navbar */
     header {
