--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
       font-size: 2rem;
       font-weight: 800;
       margin-bottom: 2rem;
+	  color: #111827;
     }
     .features {
       display: grid;
