--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
       color: #2563EB;
     }
 
+	.contact h2 {
+		color: #111827;
+	}
+
     /* Footer */
     footer {
       text-align: center;
