--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
       font-weight: 800;
       margin-bottom: 2rem;
     }
+	.projects h3 {
+		color: #111827;
+	}
+	.projects p {
+		color: #000000;
+	}
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
