--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
       margin-bottom: 2rem;
 	  color: #111827;
     }
+	.about h3 {
+		color: #111827;
+	}
+	.about p {
+		color: #000000;	
+	}
     .features {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
