--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           <a href="Proyect_3.html" class="btn-primary">View Case Study</a>
         </div>
       </div>
-      <!-- Placeholder projects -->
+      <!-- Placeholder projects
       <div class="card">
         <img src="images/placeholder.svg" alt="Coming Soon">
         <div class="card-content">
@@ -284,7 +284,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- About -->
   <section id="about" class="about">
